Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2903

replay-ost-single test_6 and test_7 failure

XMLWordPrintable

    • 3
    • 6992

      This issue was created by maloo for Hiroya Nozaki <nozaki.hiroya@jp.fujitsu.com>

      This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/34b38944-8513-11e2-9ab1-52540035b04c.

      The sub-test test_7 failed with the following error:

      test_7 failed with 1

      Info required for matching: replay-ost-single 7

            utopiabound Nathaniel Clark
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: