LU-2903 osd-zfs: fix calculation of available space

This correctly calculates the available space during statfs on zfs.
The issue was that bavail was being driven down to zero during statfs
of zfs and precreates would subsequently fail.

This also cleans up the replay-ost-single tests (no functional
changes).

Test-Parameters: mdsfilesystemtype=zfs ostfilesystemtype=zfs  mdtfilesystemtype=zfs
Signed-off-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Change-Id: Ib4b5a7c645d6b2a630dcc729483422c8b3a095db