lustre/osd-zfs/osd_handler.c
@@ -319,12 +319,12 @@ int osd_statfs(const struct lu_env *env, struct dt_device *d,
 	ENTRY;
 
 	rc = udmu_objset_statfs(&osd->od_objset, osfs);
-	if (rc)
-		RETURN(rc);
-	osfs->os_bavail -= min_t(obd_size,
-				 OSD_GRANT_FOR_LOCAL_OIDS / osfs->os_bsize,
-				 osfs->os_bavail);
-	RETURN(0);
+	if (likely(!rc))
+		osfs->os_bavail = min_t(obd_size,
+			OSD_GRANT_FOR_LOCAL_OIDS / osfs->os_bsize,
+			osfs->os_bavail);
+
+	RETURN(rc);
 }
 
 /*
